Update example to use java 21 and latest libs

--- a/template-otel.properties
+++ b/template-otel.properties
@@ -8,3 +8,12 @@ otel.exporter.otlp.traces.headers=x-honeycomb-team=HONEYCOMB_API_KEY,x-honeycomb
 otel.exporter.otlp.metrics.headers=x-honeycomb-team=HONEYCOMB_API_KEY,x-honeycomb-dataset=matt-test
 otel.service.name=matt-test
 otel.javaagent.debug=true
+otel.experimental.sdk.shutdown.timeout=10
+otel.bsp.schedule.delay=500
+otel.bsp.max.queue.size=2048
+otel.bsp.max.export.batch.size=512
+otel.bsp.export.timeout=3000
+
+
+
+
